Started implementing pagination

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
         <script type='text/javascript' src="lib/angular.min.js" charset="UTF-8"></script>
         <script type='text/javascript' src="lib/angular-route.min.js" charset="UTF-8"></script>
         <script type='text/javascript' src="lib/angular-file-upload.min.js" charset="UTF-8"></script>
+        <script type='text/javascript' src="lib/jquery-ui.min.js" charset="UTF-8"></script>
+        <script type='text/javascript' src="lib/pagination.js" charset="UTF-8"></script>
         <script type='text/javascript' src="scripts/app.js" charset="UTF-8"></script>
         <script type='text/javascript' src="scripts/controller.js" charset="UTF-8"></script>
         <script type='text/javascript' src="scripts/services.js" charset="UTF-8"></script>
@@ -18,6 +20,11 @@
 
         <!-- Morris Charts CSS -->
         <link href="templates/css/plugins/morris.css" rel="stylesheet">
+
+        <!-- JQUERY UI Core CSS -->
+        <link href="templates/css/jquery-ui.min.css" rel="stylesheet">
+        <link href="templates/css/jquery-ui.structure.min.css" rel="stylesheet">
+        <link href="templates/css/jquery-ui.theme.min.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
         <link href="templates/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
