--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,13 @@
         <script type='text/javascript' src="lib/angular-file-upload.min.js" charset="UTF-8"></script>
         <script type='text/javascript' src="lib/jquery-ui.min.js" charset="UTF-8"></script>
         <script type='text/javascript' src="lib/pagination.js" charset="UTF-8"></script>
+        <script type='text/javascript' src="lib/bootstrap.min.js" charset="UTF-8"></script>
+        <script type='text/javascript' src="lib/dirPagination.js" charset="UTF-8"></script>
+        <script type='text/javascript' src="lib/ui-bootstrap-tpls-1.3.2.js" charset="UTF-8"></script>
         <script type='text/javascript' src="scripts/app.js" charset="UTF-8"></script>
         <script type='text/javascript' src="scripts/controller.js" charset="UTF-8"></script>
         <script type='text/javascript' src="scripts/services.js" charset="UTF-8"></script>
+     
         <!-- Bootstrap Core CSS -->
         <link href="templates/css/bootstrap.min.css" rel="stylesheet">
 
